--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
       <div class="col-md-4 col-sm-12">
         <div class="header-right">
           <div class="user-wrap">
-            <div class="login-btn"><%= link_to t("user.login") ,"#" %></div>
+            <div class="login-btn"><%= link_to t("user.login"), login_path %></div>
             <div class="register-btn"><%= link_to t("user.register") ,"#" %></div>
             <div class="clearfix"></div>
           </div>
