--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container"> 
     <div class="row"> 
       <div class="col-md-3 col-sm-3">
-        <div class="logo"><%= link_to image_tag("logo.png"), "#" %></div>
+        <div class="logo"><%= link_to image_tag("logo.png"), root_path %></div>
       </div>
       <div class="col-md-5 col-sm-9"> 
         <div class="navigationwrape">
@@ -10,7 +10,7 @@
             <div class="navbar-header"> </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><%= link_to t("static_pages.home.title"), "#" %></li>
+                <li><%= link_to t("static_pages.home.title"), root_path %></li>
                 <li><%= link_to t("static_pages.about.title"), "#" %></li>
               </ul>
             </div>
