--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @profile, url: profile_index_path do |f| %>
+<%= form_for @profile do |f| %>
   <div class="listWrpService featured-wrap candidate candetail">
     <div class="row">
       <div class="col-md-2 col-sm-3 col-xs-3">
