--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -7,5 +7,6 @@
   <td><%= post.end_date %></td>
   <td>
     <%= link_to t("admin.post.delete"), [:admin, post], method: :delete, class: "btn btn-danger btn-sm" %>
+    <%= link_to t("admin.post.edit"), edit_admin_post_path(post), class: "btn btn-primary btn-sm" %>
   </td>
 </tr>
