--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
           <%= link_to "#", class: "nav-link" do %>
-            <i class="fab fa-github"></i>
+            <i class="nav-icon fas fa-tachometer-alt"></i>
             <p><%= t "admin.dashboard" %></p>
           <% end %>
         </li>
