--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,5 +22,7 @@
       </div>
       <%= render "layouts/admin_footer" %>
     </div>
+
+    <%= javascript_pack_tag "adminlte" %>
   </body>
 </html>
