--- a/app/views/admin/posts/_post_form.html.erb
+++ b/app/views/admin/posts/_post_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @post], url: admin_posts_path do |f| %>
+<%= form_for [:admin, @post] do |f| %>
   <%= render "shared/error_messages", object: f.object %>
   <div class="row">
     <div class="col-md-6">
