--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,7 +1,7 @@
 <%= provide :title, t("admin.post.post_job") %>
 <div class="row justify-content-center">
   <div class="col-md-10">
-    <div class="card card-default">
+    <div class="card card-info">
       <div class="card-header justify-content-center">
         <h3 class="card-title"><%= t "admin.post.post_job" %></h3>
       </div>
