--- a/app/views/admin/user_applies/index.html.erb
+++ b/app/views/admin/user_applies/index.html.erb
@@ -1,17 +1,28 @@
 <%= provide :title, t("admin.apply.apply_job") %>
-<%= render "shared/notice_messages" %>
-<h4><%= t "admin.apply.list_candidate" %></h4>
-<table id="example" class="table table-striped table-bordered">
-  <thead>
-    <th>#</th>
-    <th><%= t "admin.apply.post_title" %></th>
-    <th><%= t "admin.post.start_date" %></th>
-    <th><%= t "admin.post.end_date" %></th>
-    <th><%= t "admin.apply.candidate" %></th>
-    <th><%= t "admin.apply.status" %></th>
-    <th><%= t "admin.apply.action" %></th>
-  </thead>
-  <tbody>
-    <%= render @user_applies %>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-header">
+          <h4><%= t "admin.apply.list_candidate" %></h4>
+        </div>
+        <div class="card-body">
+          <table id="example" class="table table-striped table-bordered">
+            <thead>
+              <th>#</th>
+              <th class="title-post"><%= t "admin.apply.post_title" %></th>
+              <th><%= t "admin.post.start_date" %></th>
+              <th><%= t "admin.post.end_date" %></th>
+              <th><%= t "admin.apply.candidate" %></th>
+              <th><%= t "admin.apply.status" %></th>
+              <th><%= t "admin.apply.action" %></th>
+            </thead>
+            <tbody>
+              <%= render @user_applies %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
