public_private_cv

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <%= render "layouts/header" %>
+    <%= render "shared/notice_messages" %>
     <%= yield %>
     <%= render "layouts/footer" %>
   </body>
