--- a/app/views/posts/_apply_form.html.erb
+++ b/app/views/posts/_apply_form.html.erb
@@ -1,6 +1,6 @@
 <div id="apply_job">
   <% if user_apply? @post %>
-    <%= render "cancel", post: @post %>
+    <%= render "posts/cancel", post: @post %>
   <% else %>
     <%= render "posts/apply", post: @post %>
   <% end %>
