--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -31,7 +31,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to logout_path, method: :delete, class: "nav-link" do %>
+          <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
             <i class="fas fa-sign-out-alt"></i> <%= t "user.logout" %>
           <% end %>
         </li>
