--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
                   <li><i class="fa fa-calendar" aria-hidden="true"></i><%= @post.apply_time %></li>
                 </ul>
                 <div class="time-btn"><%= @post.target_type %></div>
-                <%= render "apply_form" if logged_in? %>
+                <%= render "apply_form" if user_signed_in? %>
               </div>
             </div>
             <h2><%= t "admin.post.description" %></h2>
