--- a/app/views/posts/_apply_form.html.erb
+++ b/app/views/posts/_apply_form.html.erb
@@ -1,7 +1,7 @@
 <div id="apply_job">
   <% if user_apply? @post %>
-    <%= render "cancel" %>
+    <%= render "cancel", post: @post %>
   <% else %>
-    <%= render "apply" %>
+    <%= render "posts/apply", post: @post %>
   <% end %>
 </div>
