--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,8 +8,8 @@
         <h3><%= link_to post.title, post_path(post) %></h3>
         <p><%= post.company_name %></p>
         <ul class="featureInfo">
-          <li><i class="fa fa-map-marker" aria-hidden="true"></i><%= post.address %></li>
-          <li><i class="fa fa-calendar" aria-hidden="true"></i><%= post.apply_time %></li>
+          <li><i class="fas fa-map-marker-alt"></i><%= post.address %></li>
+          <li><i class="fas fa-calendar-alt"></i><%= post.apply_time %></li>
         </ul>
         <div class="time-btn"><%= post.target_type %></div>
       </div>
