--- a/app/views/posts/_cancel.html.erb
+++ b/app/views/posts/_cancel.html.erb
@@ -1,3 +1,3 @@
-<%= form_tag user_apply_path(current_user), remote: true do %>
-  <%= submit_tag t("cancel_job"), class: "btn btn-danger" %>
+<%= form_tag user_apply_path(post.id), method: :delete, remote: true do %>
+  <%= submit_tag t("cancel_job"), class: "btn btn-danger", id: "cancel_job" %>
 <% end %>
