--- a/app/views/profiles/_qualification_fields.html.erb
+++ b/app/views/profiles/_qualification_fields.html.erb
@@ -1,5 +1,4 @@
 <%= f.text_field :title, placeholder: t("cv.title"), class: "form-control" %>
-<%= f.date_field :start_time, class: "form-control" %> - 
-<%= f.date_field :end_time, class: "form-control" %>
-<%= f.text_area :content, class: "form-control" %>
-<%= link_to_remove_association t("cv.remove"), f %>  
+<%= f.date_field :start_time, class: "form-control", class: "form-control" %> - 
+<%= f.date_field :end_time, class: "form-control", class: "form-control" %>
+<%= f.text_area :content, class: "form-control", class: "form-control" %>
