--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -12,6 +12,7 @@
           <li><i class="fas fa-calendar-alt"></i><%= post.apply_time %></li>
         </ul>
         <div class="time-btn"><%= post.target_type %></div>
+        <div><%= applied_post_status(post) %></div>
       </div>
     </div>
   </div>
