--- a/app/views/profiles/_profile_skill_fields.html.erb
+++ b/app/views/profiles/_profile_skill_fields.html.erb
@@ -1,4 +1,9 @@
-<div class="head progresshead">
-  <%= f.text_field :name, placeholder: t("cv.title"), class: "form-control" %> 
-  <%= f.number_field :point, placeholder: t("cv.point"), class: "form-control skill_point" %>
+<div class="nested-fields">
+  <div class="head progresshead">
+    <%= f.text_field :name, placeholder: t("cv.title"), class: "form-control" %> 
+    <%= f.number_field :point, placeholder: t("cv.point"), class: "form-control skill_point" %>
+    <%= link_to_remove_association f do %>
+      <i class="fas fa-minus-circle text-danger"></i>
+    <% end %>
+  </div>
 </div>
