--- a/app/views/profiles/_qualification_fields.html.erb
+++ b/app/views/profiles/_qualification_fields.html.erb
@@ -1,4 +1,9 @@
-<%= f.text_field :title, placeholder: t("cv.title"), class: "form-control" %>
-<%= f.date_field :start_time, class: "form-control", class: "form-control" %> - 
-<%= f.date_field :end_time, class: "form-control", class: "form-control" %>
-<%= f.text_area :content, class: "form-control", class: "form-control" %>
+<div class="nested-fields">
+    <%= f.text_field :title, placeholder: t("cv.title"), class: "form-control" %>
+    <%= f.date_field :start_time, class: "form-control", class: "form-control" %> - 
+    <%= f.date_field :end_time, class: "form-control", class: "form-control" %>
+    <%= f.text_area :content, class: "form-control", class: "form-control" %>
+    <%= link_to_remove_association f do %>
+        <i class="fas fa-minus-circle text-danger"></i>
+    <% end %>
+</div>
