--- a/app/views/admin/users/_profile.html.erb
+++ b/app/views/admin/users/_profile.html.erb
@@ -16,7 +16,7 @@
           </ul>
         </div>
         <div class="col-5 text-center">
-          <%= image_tag(profile.avatar, class: "img-circle img-fluid") %>
+          <%= image_tag(profile.avatar, class: "img-circle img-fluid") if  profile.avatar.present? %>
         </div>
       </div>
     </div>
