add_gem_ransack

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,3 +58,11 @@ body {
   line-height: 20px;
   margin-top: 10px;
 }
+
+.dataTables_filter, .dataTables_paginate {
+  float: right;
+}
+
+.custom-select {
+  margin: auto;
+}
