--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -3,6 +3,13 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
+        <div class="card-body">
+          <%= render "search_post" %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="card">
         <div class="card-header">
           <h3 class="card-title"><%= t "admin.post.list_all_job" %></h3>
           <%= link_to new_admin_post_path, class: "btn btn-primary btn-sm float-right" do %>
