--- a/app/views/admin/user_applies/_user_apply.html.erb
+++ b/app/views/admin/user_applies/_user_apply.html.erb
@@ -10,7 +10,7 @@
     </span>
   </td>
   <td>
-    <%= link_to admin_user_path(user_apply.user_id), class: "btn btn-info btn-sm" do %>
+    <%= link_to admin_profile_path(user_apply.profile_id), class: "btn btn-info btn-sm" do %>
       <i class="fas fa-eye"></i>
     <% end %>
     <% if user_apply.pending? %>
