--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,15 +25,21 @@
                     <%= current_user.username %><b class="caret"></b>
                   </a>
                     <ul class="dropdown-menu">
-                      <li>
-                        <%= link_to t("user.create_profile"), new_profile_path(id: current_user.id) %>
-                      </li>
-                      <li>
-                        <%= link_to t("user.show_profiles"), user_path(id: current_user.id) %>
-                      </li>
-                      <li>
-                        <%= link_to t("user.show_job_applieds"), job_applieds_user_path(id: current_user.id) %>
-                      </li>
+                      <% if can? :create, Profile %>
+                        <li>
+                          <%= link_to t("user.create_profile"), new_profile_path(id: current_user.id) %>
+                        </li>
+                      <% end %>
+                      <% if can? :read, Profile %>
+                        <li>
+                          <%= link_to t("user.show_profiles"), user_path(id: current_user.id) %>
+                        </li>
+                      <% end %>
+                      <% if can? :read, UserApply %>
+                        <li>
+                          <%= link_to t("user.show_job_applieds"), job_applieds_user_path(id: current_user.id) %>
+                        </li>
+                      <% end %>
                       <li>
                         <%= link_to t("user.logout"), destroy_user_session_path, method: :delete %>
                       </li>
