--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="inner-content listing detail">
+<div class="inner-content loginWrp listing detail">
   <div class="container">     
     <div class="inner-wrap">
       <div class="row">
