--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,37 +1,45 @@
 <%= form_for @profile do |f| %>
-  <%= render "shared/error_messages", object: f.object %>
   <div class="listWrpService featured-wrap candidate candetail">
     <div class="row">
+      <div><%= f.text_field :title, placeholder: t("cv.title"), class: "form-control form-title" %></div>
       <div class="col-md-2 col-sm-3 col-xs-3">
         <div class="listImg">
-            <%= gravatar_image_tag(current_user.email.gsub("spam", "mdeering")) %>
-            <%= f.label :avatar, t("cv.change_avatar"), class: "btn" %>
+          <% if @profile.image.blank? %>
+            <%= gravatar_image_tag(current_user.email.gsub("spam", "mdeering"), id: "profile-image") %>
+          <% else %>
+            <%= image_tag @profile.image %>
+          <% end %>
+            <%= f.label :avatar, t("cv.change_avatar"), class: "btn", id: "avatar-upload" %>
             <%= f.file_field :avatar, accept: Settings.image.accept, class: "hidden" %>
         </div>
       </div>
       <div class="col-md-10 col-sm-9 col-xs-9">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
             <h3><%= current_user.username %></h3>
             <div class="designation">
+              <i class="fas fa-briefcase"></i>
               <%= f.text_field :position, placeholder: t("cv.position"), class: "form-control" %>
+              <%= errors_for f, :address %>
             </div>
             <div>
               <i class="fas fa-map-marker-alt"></i>
               <%= f.text_field :address, placeholder: t("cv.place"), class: "form-control" %>
+              <%= errors_for f, :address %>
             </div>
             <ul class="featureInfo">
               <li>
                 <i class="far fa-envelope"></i>
                 <%= f.text_field :email, placeholder: t("cv.email"), class: "form-control" %> 
+              <%= errors_for f, :email %>
               </li>
               <li>
                 <i class="fas fa-phone"></i>
                 <%= f.text_field :phone, placeholder: t("cv.phone"), class: "form-control" %> 
+                <%= errors_for f, :phone %>
               </li>
             </ul>  
           </div>
-          <div class="col-md-4"></div>
         </div>
       </div>
     </div>
@@ -97,5 +105,6 @@
         <% end %>
       </div>
   </div>
-  <%= f.submit t("signup"), class: "btn btn-primary" %>
+  <%= f.submit yield(:button), class: "btn btn-primary" %>
 <% end %>
+<%= javascript_pack_tag "show_image" %>
