--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,5 @@
-<div class="inner-content loginWrp resumeWrp">
+<%= provide :button, t("admin.company.update") %>
+<div class="inner-content resumeWrp">
   <div class="container">  
     <div class="row">
       <div class="col-md-9 col-sm-8">
