--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
-    <%= stylesheet_link_tag "custom" %>
+    <%= stylesheet_link_tag "client" %>
     <%= stylesheet_link_tag "style" %>
     <%= javascript_include_tag "i18n" %>
     <%= javascript_include_tag "translations", skip_pipeline: true %>
@@ -19,6 +19,6 @@
     <%= yield %>
     <%= render "layouts/footer" %>
 
-     <%= javascript_pack_tag "user_apply" %>
+    <%= javascript_pack_tag "user_apply" %>
   </body>
 </html>
