--- a/app/views/profiles/_profile_skill_fields.html.erb
+++ b/app/views/profiles/_profile_skill_fields.html.erb
@@ -1,7 +1,9 @@
 <div class="nested-fields">
   <div class="head progresshead">
-    <%= f.text_field :name, placeholder: t("cv.title"), class: "form-control" %> 
+    <%= f.text_field :name, placeholder: t("cv.title"), class: "form-control" %>
+    <%= errors_for f, :name %>
     <%= f.number_field :point, placeholder: t("cv.point"), class: "form-control skill_point" %>
+    <%= errors_for f, :point %>
     <%= link_to_remove_association f do %>
       <i class="fas fa-minus-circle text-danger"></i>
     <% end %>
