--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
-<div class="container"> 
-    <div class="row">
-      <div class="col-md-9 col-sm-8">
-        <% if @profile.any? %>
-          <ul class="listService">
-            <%= render @profile %>
-          </ul>
-        <% end %>
+<div class="inner-content loginWrp resumeWrp">
+  <div class="container"> 
+      <div class="row">
+        <div class="col-md-9 col-sm-8">
+          <% if @profile.any? %>
+            <ul class="listService">
+              <%= render @profile %>
+            </ul>
+            <%= paginate @profile %>
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
+</div>
