--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,6 @@
     <%= render "layouts/footer" %>
 
     <%= javascript_pack_tag "user_apply" %>
+    <%= javascript_pack_tag "custom" %>
   </body>
 </html>
