--- a/app/views/job_applieds/index.html.erb
+++ b/app/views/job_applieds/index.html.erb
@@ -1,12 +1,31 @@
+<%= stylesheet_link_tag "main" %>
+
 <div class="featured-wrap loginWrp">
   <div class="container"> 
-    <% if @posts.any? %>
-      <ul class="listService">
-        <%= render @posts %>
-      </ul>
-      <%= paginate @posts %>
-    <% else %>
-      <h2><%= t "cv.applied_post" %></h2>
-    <% end %>
+    <div class="table100 ver2 m-b-110">
+      <div class="table100-head">
+        <table>
+          <thead>
+            <tr class="row100 head">
+              <th class="cell100 column1"><%= t "admin.post.title" %></th>
+              <th class="cell100 column2"><%= t "admin.post.target_type" %></th>
+              <th class="cell100 column3"><%= t "admin.apply.status" %></th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+      <div class="table100-body js-pscroll ps">
+        <table>
+          <tbody>
+            <% if @posts.any? %>
+                <%= render partial: "job_applied", collection: @posts, as: :post %>
+            <% else %>
+              <h2><%= t "cv.applied_post" %></h2>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <%= paginate @posts %>
   </div>
 </div>
