--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,7 +11,7 @@
           <li><i class="fas fa-map-marker-alt"></i><%= post.address %></li>
           <li><i class="fas fa-calendar-alt"></i><%= post.apply_time %></li>
         </ul>
-        <div class="time-btn"><%= post.target_type %></div>
+        <div class="time-btn"><%= post.target_type_i18n %></div>
         <div><%= applied_post_status(post) %></div>
       </div>
     </div>
