--- a/app/views/admin/posts/_post.html.erb
+++ b/app/views/admin/posts/_post.html.erb
@@ -6,10 +6,13 @@
   <td><%= post.start_date %></td>
   <td><%= post.end_date %></td>
   <td>
-    <%= link_to [:admin, post], method: :delete, class: "btn btn-danger btn-sm" do %>
+    <%= link_to [:admin, post], method: :delete, class: "btn btn-danger btn-sm float-right ml-1",
+      data: {toggle: "tooltip", placement: "right", confirm: "Bạn có chắc chắn muốn thực hiện hành động này?"},
+      title: "Xóa công việc" do %>
       <i class="fas fa-trash-alt"></i>
     <% end %>
-    <%= link_to edit_admin_post_path(post), class: "btn btn-primary btn-sm" do %>
+    <%= link_to edit_admin_post_path(post), class: "btn btn-primary btn-sm float-right",
+      data: {toggle: "tooltip", placement: "right"}, title: "Chỉnh sửa công việc" do %>
       <i class="fas fa-edit"></i>
     <% end %>
   </td>
