--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -1,7 +1,8 @@
 <%= provide :title, t("admin.post.edit_post") %>
-<div class="row justify-content-center">
-  <div class="col-md-10">
-    <div class="card card-default">
+<%= provide :button_text, "Cập nhập" %>
+<div class="row">
+  <div class="col-md-12">
+    <div class="card card-primary">
       <div class="card-header justify-content-center">
         <h3 class="card-title"><%= t "admin.post.edit_post" %></h3>
       </div>
