--- a/app/views/admin/profiles/show.html.erb
+++ b/app/views/admin/profiles/show.html.erb
@@ -17,9 +17,6 @@
             <li class="list-group-item">
               <b><%= t "admin.profile.email" %></b> <a class="float-right btn-link"><%= @profile.email %></a>
             </li>
-            <li class="list-group-item">
-              <b><%= t "admin.profile.facebook" %></b> <a class="float-right btn-link"><%= @profile.facebook_link %></a>
-            </li>
           </ul>
         </div>
       </div>
@@ -28,7 +25,7 @@
           <h3 class="card-title"><%= t "admin.post.skill" %></h3>
         </div>
         <div class="card-body">
-          <%= render partial: "admin/users/skill", collection: @profile.skills %>
+          <%= render partial: "profile_skill", collection: @profile.profile_skills %>
         </div>
       </div>
       <div class="card card-primary">
@@ -62,7 +59,7 @@
                 <div>
                   <i class="fas fa-briefcase"></i>
                   <div class="timeline-item">
-                    <h3 class="timeline-header"><%= t "admin.profile.experience" %></h3>
+                    <h3 class="timeline-header"><%= t "admin.profile.qualification" %></h3>
                     <%= render partial: "qualification", collection: @qualifications %>
                   </div>
                 </div>
@@ -70,11 +67,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="float-right">
-        <%= link_to t("admin.profile.cancel"), admin_user_path(id: @profile.user_id), class: "btn btn-info" %>
       </div>
     </div>
   </div>
