--- a/app/views/admin/companies/edit.html.erb
+++ b/app/views/admin/companies/edit.html.erb
@@ -1,7 +1,7 @@
 <%= provide :title, t("admin.company.update_info") %>
 <div class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-md-10">
+  <div class="row">
+    <div class="col-md-12">
       <div class="card card-info">
         <div class="card-header">
           <h3 class="card-title"><%= t "admin.company.update_info" %></h3>
