--- a/app/views/admin/posts/_search_post.html.erb
+++ b/app/views/admin/posts/_search_post.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col-md-2">
-      <%= f.submit t("admin.search"), class: "btn btn-info btn-block mt-2" %>
+      <%= f.submit t("admin.search"), class: "btn btn-info btn-block" %>
     </div>
   </div>
 <% end %>
