--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -1,6 +1,7 @@
 <%= provide :title, t("admin.post.post_job") %>
+<%= provide :button_text, t("admin.post.post") %>
 <div class="row justify-content-center">
-  <div class="col-md-10">
+  <div class="col-md-12">
     <div class="card card-info">
       <div class="card-header justify-content-center">
         <h3 class="card-title"><%= t "admin.post.post_job" %></h3>
