--- a/app/views/admin/user_applies/_user_apply.html.erb
+++ b/app/views/admin/user_applies/_user_apply.html.erb
@@ -6,7 +6,7 @@
   <td><%= user_apply.user_username %></td>
   <td>
     <span class="badge badge-<%= get_span_class user_apply %>">
-      <%= user_apply.status %>
+      <%= t "status.#{user_apply.status}" %>
     </span>
   </td>
   <td>
@@ -14,8 +14,15 @@
       <i class="fas fa-eye"></i>
     <% end %>
     <% if user_apply.pending? %>
-      <%= link_to [:admin, user_apply], method: :patch, class: "btn btn-primary btn-sm" do %>
+      <%= link_to [:admin, user_apply], method: :patch, class: "btn btn-primary btn-sm",
+        data: {toggle: "tooltip", placement: "right", confirm: "Bạn có chắc chắn muốn thực hiện hành động này?"},
+        title: "Phê duyệt" do %>
         <i class="fas fa-check"></i>
+      <% end %>
+      <%= link_to [:admin, user_apply], method: :delete, class: "btn btn-danger btn-sm",
+        data: {toggle: "tooltip", placement: "right", confirm: "Bạn có chắc chắn muốn thực hiện hành động này?"},
+        title: "Hủy bỏ" do %>
+        <i class="fas fa-times"></i>
       <% end %>
     <% end %>
   </td>
